--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
        <h1 class="pull-right dark-gray d-none d-md-block">
-         <strong>{{page.title}} (display {{mode}})</strong>
+         <strong>{{page.title}}</strong>
        </h1>
        <h3 class="pull-right dark-gray d-md-none">
-         <strong>{{page.title}} (display {{mode}})</strong>
+         <strong>{{page.title}}</strong>
        </h3>
     </div>
   </div>
