--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -85,3 +85,25 @@
     </div>
   </div>
 </div>
+
+<div class="spacing">
+  <div class="row spacing">
+    <h3>
+      <strong>ToDo</strong>
+    </h3>
+  </div>
+  <ul>
+    <li>Link shortening</li>
+    <li>X axis in present</li>
+    <li>Workflow graph</li>
+    <li>Search appending</li>
+    <li>Buttons on the top act funny</li>
+    <li>Donuts in present</li>
+    <li>Search by dataset</li>
+    <li>Table in performance</li>
+    <li>Ability to unselect bars</li>
+    <li>Colors for all things in present</li>
+    <li>CSS nightmare</li>
+    <li>Error messages</li>
+  </ul>
+</div>
