--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -96,8 +96,8 @@
     <li>Link shortening</li>
     <li>X axis in present</li>
     <li>Workflow graph</li>
-    <li>Search appending</li>
-    <li>Buttons on the top act funny</li>
+    <li><s>Search appending</s></li>
+    <li><s>Buttons on the top act funny</s></li>
     <li>Donuts in present</li>
     <li>Search by dataset</li>
     <li>Table in performance</li>
@@ -105,5 +105,9 @@
     <li>Colors for all things in present</li>
     <li>CSS nightmare</li>
     <li>Error messages</li>
+    <li>Screenshots</li>
+    <li><s>Chained mode in present<s></li>
+    <li>Growing mode in present</li>
+    <li><s>Submitted vs done events in present<s></li>
   </ul>
 </div>
