--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="data.length">
+<div class="row" ng-hide="loadingData || !data || data.length == 0">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
     Scale: <radio-selections style="text-transform: capitalize;" class="ml-2" options="availableScales" selected="scale" on-value-change="scaleChange"></radio-selections>
   </div>
@@ -24,6 +24,7 @@
                   bin-selected-callback="binSelected"
                   big-number-formatter="formatBigNumber"
                   big-number-formatter-log="formatBigNumberLog"
+                  growing-mode="growingMode"
                   data="data"></column-chart>
     
   </div>
@@ -34,26 +35,33 @@
         <a ng-if="binEntry.prepid.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
         <a ng-if="binEntry.prepid.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
       </div>
-      <div class="col-sm-2">
-        Priority: <b>{{binEntry.priority}}</b>
-      </div>
       <div ng-hide="humanReadable" class="col-sm-2">
-        Expected events: <b>{{binEntry.total_events}}</b>
+        Expected: <b>{{binEntry.total_events}}</b>
       </div>
       <div ng-hide="!humanReadable" class="col-sm-2">
-        Expected events: <b title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
+        Expected: <b title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
       </div>
-      <div class="col-sm-2">
+      <div ng-hide="humanReadable" class="col-sm-2">
+        Done: <b>{{binEntry.completed_events}}</b>
+      </div>
+      <div ng-hide="!humanReadable" class="col-sm-2">
+        Done: <b title="{{binEntry.completed_events}}">{{binEntry.completed_events | readableNumbers}}</b>
+      </div>
+      <div class="col-sm-1">
         Status: <b>{{binEntry.status}}</b>
       </div>
       <div class="col-sm-2">
-        Member of chains: <b>{{binEntry.member_of_chain.length}}</b>
+        Priority: <b>{{binEntry.priority}}</b>
+      </div>
+      <div class="col-sm-1">
+        In chains: <b>{{binEntry.member_of_chain.length}}</b>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mt-5 text-center margin-20">
     <present-stats-table mode="mode"
                          human-readable-numbers="humanReadable"
+                         growing-mode="growingMode"
                          data="data"></present-stats-table>
   </div>
 </div>
