--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -37,19 +37,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item" ng-class="{active: activeIndex == 1}">
               <a class="nav-link" href="present" ng-click="nav('/present/')">
                 <i class="fa fa-chart-bar spacing-r"></i>
                 Present Statistics
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" ng-class="{active: activeIndex == 2}">
               <a class="nav-link" href="historical" ng-click="nav('/historical/')"">
                 <i class="fa fa-chart-line spacing-r"></i>
                 Historical Statistics
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" ng-class="{active: activeIndex == 3}">
               <a class="nav-link" href="performance" ng-click="nav('/performance/')">
                 <i class="fa fa-heartbeat spacing-r"></i>
                 Performance Statistics
