Finishing Growing mode

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -107,7 +107,7 @@
     <li>Error messages</li>
     <li>Screenshots</li>
     <li><s>Chained mode in present<s></li>
-    <li>Growing mode in present</li>
+    <li><s>Growing mode in present</s></li>
     <li><s>Submitted vs done events in present<s></li>
   </ul>
 </div>
