--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -28,27 +28,31 @@
                   data="data"></column-chart>
     
   </div>
+
+      {{humanReadable}}{{growingMode}}
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center margin-20" ng-show="selectedBin.length">
     <p>Requests (<b>{{selectedBin.length}}</b>) in selected bar</p>
     <div ng-repeat="binEntry in selectedBin" class="row zebra-lines small-padding">
       <div class="col-sm-4">
         <a ng-if="binEntry.prepid.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
         <a ng-if="binEntry.prepid.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{binEntry.prepid}}" target="_blank">{{binEntry.prepid}}</a>
+        <small ng-show="binEntry.growing_fake" style="color:red" title="This is a part of {{binEntry.prepid}} counted as done">(Partial)</small>
       </div>
-      <div ng-hide="humanReadable" class="col-sm-2">
-        Expected: <b>{{binEntry.total_events}}</b>
-      </div>
-      <div ng-hide="!humanReadable" class="col-sm-2">
-        Expected: <b title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
-      </div>
-      <div ng-hide="humanReadable" class="col-sm-2">
-        Done: <b>{{binEntry.completed_events}}</b>
+      <div class="col-sm-2">
+        <span ng-show="!growingMode || binEntry.status !== 'submitted'">Expected: </span>
+        <span ng-show="growingMode && binEntry.status === 'submitted'">Left: </span>
+        <b ng-show="!humanReadable">{{binEntry.total_events}}</b>
+        <b ng-show="humanReadable" title="{{binEntry.total_events}}">{{binEntry.total_events | readableNumbers}}</b>
       </div>
       <div ng-hide="!humanReadable" class="col-sm-2">
-        Done: <b title="{{binEntry.completed_events}}">{{binEntry.completed_events | readableNumbers}}</b>
+        Done:
+        <b ng-show="!humanReadable">{{binEntry.completed_events}}</b>
+        <b ng-show="humanReadable" title="{{binEntry.completed_events}}">{{binEntry.completed_events | readableNumbers}}</b>
       </div>
       <div class="col-sm-1">
-        Status: <b>{{binEntry.status}}</b>
+        Status:
+        <b ng-hide="binEntry.growing_fake">{{binEntry.status}}</b>
+        <b ng-show="binEntry.growing_fake">submitted</b>
       </div>
       <div class="col-sm-2">
         Priority: <b>{{binEntry.priority}}</b>
