Ability to deselect bars, selected bars background pattern

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -101,7 +101,7 @@
     <li>Donuts in present</li>
     <li>Search by dataset</li>
     <li>Table in performance</li>
-    <li>Ability to unselect bars</li>
+    <li><s>Ability to unselect bars</s></li>
     <li>Colors for all things in present</li>
     <li>CSS nightmare</li>
     <li>Error messages</li>
