PPD tags, McM dataset name, major clean up

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -68,7 +68,7 @@
 
 <div class="spacing text-center">
   <div class="row spacing text-center">
-    <h3>
+    <h3 style="width: 100%">
       <strong>pMp database is:</strong>
     </h3>
   </div>
@@ -93,8 +93,8 @@
     </h3>
   </div>
   <ul>
-    <li>Link shortening</li>
-    <li>X axis in present</li>
+    <li><s>Link shortening</s></li>
+    <li><s>X axis in present</s></li>
     <li>Workflow graph</li>
     <li><s>Search appending</s></li>
     <li><s>Buttons on the top act funny</s></li>
@@ -103,11 +103,12 @@
     <li>Table in performance</li>
     <li><s>Ability to unselect bars</s></li>
     <li>Colors for all things in present</li>
-    <li>CSS nightmare</li>
+    <li>CSS nightmare: size, alignment, color, etc.</li>
     <li>Error messages</li>
     <li>Screenshots</li>
-    <li><s>Chained mode in present<s></li>
+    <li><s>Chained mode in present</s></li>
     <li><s>Growing mode in present</s></li>
-    <li><s>Submitted vs done events in present<s></li>
+    <li><s>Submitted vs done events in present</s></li>
+    <li>Logging</li>
   </ul>
 </div>
